--- a/html/sign.html
+++ b/html/sign.html
@@ -8,7 +8,7 @@
     <title>Sign in</title>
     <link rel="icon" href="https://a.travel-assets.com/mad-service/header/banner/orbitz.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="C:\Users\91823\Desktop\con_unit_2\unique-baseball-7209\style\sign.css">
+    <link rel="stylesheet" href="sign.css">
 </head>
 
 <body>
